@@ -10,6 +10,8 @@ Changes since PyInstaller 1.3
    with the AIX compiler.
  + Fix support for .py files with DOS line endings under Linux (fixes
    PyOpenGL).
+ + Fix support for PIL when imported without top-level package ("import 
+   Image").
 
 
 PyInstaller 1.3
